--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -182,17 +182,33 @@ section#portfolio {
         top: 0;
         left: 0;
         opacity: 0;
-        transition: opacity 300ms ease-out;
+        transition: all 300ms ease-out;
         z-index: 1;
 
+        & h4{
+          margin-top: 3rem;
+        }
+
+        & h6{
+          margin-bottom: auto;
+        }
+
         & .btn {
+          position: absolute;
+          bottom: 0;
           margin-bottom: 0;
+          font-size: 1rem;
+          transition: all 300ms ease-out;
         }
       }
 
       &:hover {
         & .description {
           opacity: 1;
+
+          & .btn{
+            bottom: 2rem;
+          }
         }
       }
     }
